# keysaver

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx  KeyCard.tsx  KeyForm.tsx  KeyList.tsx
src/hooks/: useKeys.ts
src/lib/: storage.ts
src/stores/: keyStore.ts
src/types/: index.ts
